Interface styling update - adding css link to file

--- a/Calculator Interface.html
+++ b/Calculator Interface.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/Users/christineeisman/Documents/MIMO-Beta---Web-Developmet-Course/Calculator Interface Styling.css">
+    <link rel="stylesheet" type="text/css" href="https://ceisman1.github.io/MIMO-Beta---Web-Development-Course/Calculator%20Interface%20Styling.css">
   </head>
   <body>
     <h1>Calculator Interface</h1>
