Edit to src file type: js corrected to jsx

--- a/DynamicAboutMePageindex.html
+++ b/DynamicAboutMePageindex.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script type="module" src="DynamicAboutMePageindex.js"></script>
+    <script type="module" src="DynamicAboutMePageindex.jsx"></script>
     <link rel="stylesheet" href="DynamicAboutMePage.css">
   </head>
   <body>
